# cyvcf2

./: .buildinfo  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  docstrings.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.sh  writing.html
.github/workflows/: build.yml  wheels.yml
_modules/: index.html
_sources/: docstrings.rst.txt  index.rst.txt  index.txt  writing.rst.txt
_static/: documentation_options.js
ci/: Dockerfile.alpine.test  Dockerfile.slim.test  Dockerfile.test  linux-deps  osx-arm64-deps  osx-deps  test
cyvcf2/: 1kg.sites  __init__.py  __main__.py  cli.py  cyvcf2.c  cyvcf2.pxd  cyvcf2.pyx  helpers.c  helpers.h  relatedness.h
cyvcf2/tests/: decomposed.vcf  issue_198.vcf  issue_44.vcf  multi-contig.bcf  multi-contig.bcf.csi  multi-contig.vcf.gz.csi  multi-contig.vcf.gz.tbi  no-seq-len.vcf  no-seq-names.vcf  test-alt-repr.vcf  test-format-string.vcf  test-genotypes.vcf  test-haploidX.vcf  test-hemi.vcf  test-missingness-option-flag.vcf.gz.tbi  test-multiallelic-homozygous-alt.vcf.gz.tbi  test-no-genotypes.vcf  test.bug.117.vcf  test.comp_het.3.vcf  test.isa.vcf  test.mnp.vcf  test.snpeff.bcf  test.snpeff.bcf.csi  test.snpeff.vcf  test.vcf.gz.tbi  test.warnings.vcf.gz.tbi  test_cli.py  test_gt_alt_freqs.vcf  test_hemi.py  test_reader.py  test_writer.py
cyvcf2/tests/docker-install-tests/: Dockerfile.python-3.8-alpine  Dockerfile.python-3.8-slim  Dockerfile.v0.22.0-python-3.8-alpine  Dockerfile.v0.22.0-python-3.8-slim  NOTES  requirements.txt
doc/: Makefile
doc/source/: conf.py
docs/source/: conf.py  docstrings.rst  index.rst
htslib/: bgzip  config.h  config.mk  config.status  configure  htsfile  htslib.pc.tmp  htslib_static.mk  libhts.so.2  sam-exp.h  sav.vcf  t.c  tabix  vcf.c  version.h
htslib/autom4te.cache/: output.0  requests  traces.0
scripts/: compare.sh  filter-cyvcf2.py  filter-pysam.py  filter-pyvcf.py  table.py  trio-denovo.py
