[build-system]
requires = [
  "setuptools",
  "wheel",
  'cython>=0.23.3,<3; python_version < "3.9"',
  'cython>=3; python_version >= "3.9"',
  'oldest-supported-numpy; os_name != "nt" and python_version < "3.9"',
  'numpy; os_name == "nt" and python_version < "3.9"',
  'numpy>=2.0.0; python_version >= "3.9"',
]
