[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  'cython>=0.23.3,<3; python_version < "3.9"',
  'cython>=3; python_version >= "3.9"',
  'oldest-supported-numpy; os_name != "nt" and python_version < "3.9"',
  'numpy; os_name == "nt" and python_version < "3.9"',
  'numpy>=2.0.0; python_version >= "3.9"',
]
build-backend = "setuptools.build_meta"

[project]
name = "cyvcf2"
dynamic = ["version"]
description = "fast vcf parsing with cython + htslib"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Brent Pedersen", email = "bpederse@gmail.com" },
]
dependencies = [
  'numpy>=1.16.0; python_version < "3.9"',
  'numpy>=2.0.0; python_version >= "3.9"',
  "coloredlogs",
  "click",
]

[project.urls]
Homepage = "https://github.com/brentp/cyvcf2/"
Documentation = "https://brentp.github.io/cyvcf2/"

[project.scripts]
cyvcf2 = "cyvcf2.__main__:cli"

[tool.setuptools]
packages = ["cyvcf2"]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "cyvcf2._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["cyvcf2/tests"]
