[build-system]
requires = [
  "scikit-build-core>=0.11",
  'cython>=0.23.3,<3; python_version < "3.9"',
  'cython>=3; python_version >= "3.9"',
  'oldest-supported-numpy; os_name != "nt" and python_version < "3.9"',
  'numpy; os_name == "nt" and python_version < "3.9"',
  'numpy>=2.0.0; python_version >= "3.9"',
]
build-backend = "scikit_build_core.build"

[project]
name = "cyvcf2"
dynamic = ["version"]
description = "fast vcf parsing with cython + htslib"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Brent Pedersen", email = "bpederse@gmail.com" },
]
dependencies = [
  'numpy>=1.16.0; python_version < "3.9"',
  'numpy>=2.0.0; python_version >= "3.9"',
  "coloredlogs",
  "click",
]

[project.urls]
Homepage = "https://github.com/brentp/cyvcf2/"
Documentation = "https://brentp.github.io/cyvcf2/"

[project.scripts]
cyvcf2 = "cyvcf2.__main__:cli"

[tool.scikit-build]
wheel.packages = ["cyvcf2"]
wheel.exclude = [
  "cyvcf2/tests/**",
  "cyvcf2/*.c",
  "cyvcf2/*.h",
  "cyvcf2/*.pxd",
  "cyvcf2/*.pyx",
]
sdist.cmake = true
sdist.include = [
  "CMakeLists.txt",
  "htslib/htscodecs/htscodecs/version.h",
]
sdist.exclude = [
  "cyvcf2/tests/**",
  "htslib/test/**",
  "htslib/htscodecs/tests/**",
  "htslib/htscodecs/javascript/**",
  "htslib/config.status",
  "htslib/config.mk",
  "htslib/htscodecs.mk",
  "htslib/*.o",
  "htslib/**/*.o",
  "htslib/*.a",
  "htslib/*.so",
  "htslib/*.dylib",
  "htslib/*.dll",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "cyvcf2/_version.py"

[tool.pytest.ini_options]
testpaths = ["cyvcf2/tests"]
